# py-player

./: pyproject.toml
.github/workflows/: flake8.yaml  typecheck.yaml
pyplayer/: __init__.py  __main__.py  audioplayer.py  click_slider.py  player_controller.py
pyplayer/interfaces/: mainwindow.py
pyplayer/interfaces/ui/: MainWindow.ui
tests/: __init__.py
